# arkadu-docs

./: ArkaduDocs.code-workspace  LICENSE  README.md  conf.py  index.rst  requirements.txt  setup.cfg
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/introduction/: intro.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  index.doctree
_build/html/.doctrees/introduction/: intro.doctree
_build/html/.doctrees/third-apps/: register-apps.doctree
_build/html/.doctrees/user-gui/: acceso.doctree  perfil.doctree  policy.doctree  registro.doctree
_build/html/_sources/: index.rst.txt
_build/html/_sources/introduction/: intro.rst.txt
_build/html/_sources/third-apps/: register-apps.rst.txt
_build/html/_sources/user-gui/: perfil.rst.txt  registro.rst.txt
_build/html/introduction/: intro.html
_build/html/third-apps/: register-apps.html
_build/html/user-gui/: acceso.html  perfil.html  policy.html  registro.html
third-apps/: arkadu_create_order.py  arkadu_get_orders.py  arkadu_register_payment.py  arkadu_renovar_token.py  arkadu_reporte_de_movimientos.py  ejemplo_pago_duplicado.json  ejemplo_respuesta_crear_orden.json  register-apps.rst  repuesta_movimientos.json  respuesta_de_pago.json  result_get_orders.json
user-gui/: #1 SINAY.txt  acceso.rst  perfil.rst  policy.rst  registro.rst
