[metadata]
name = arkadu-docs
version = 1.0
release = 1.0.0
license = MIT
description = Arkadu documentation
author = Arkadu SAS
author_email = docs@arkadu.com
url = https://docs.arkadu.com
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Users, Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Framework :: sphinx

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = esbozos
github_repo = docs.arkadu.com

